--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Hellow World</h1>
     <h1>só pra ver uma coisa</h1>
+    <br>
+    <hr>
+    <br>
+    <h1>testando merge</h1>
 </body>
 </html>
